# did-credential-manager-Ai-agents

./: .gitignore  DEMO.md  DEPLOYMENT.md  docker-compose.yml  ngrok.yml  package-lock.json  package.json  register-agents.bat  register-agents.sh
.claude/: settings.local.json
ai-agent/: Dockerfile  package.json
ai-agent/data/: ai-agent-identity.json
ai-agent/src/: agent.ts  index.ts  server.ts
ai-agent/src/executor/: chat-agent.ts  task-executor.ts
ai-agent/src/routes/: agent-routes.ts
common/src/: index.ts
common/src/utils/: identity-store.ts
demo/kyndryl-agent-frontend/: index.html  package.json
demo/kyndryl-agent-frontend/src/: App.tsx  index.css
demo/kyndryl-agent-frontend2/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
demo/kyndryl-agent-frontend2/src/: App.css  App.tsx  config.ts  tempApp.tsx  tempAppCss.css  types.ts
docs/: OLLAMA_ORCHESTRATION_TUTORIAL.md
holder/: Dockerfile
issuer/: Dockerfile
orchestrator/: Dockerfile  package.json
orchestrator/data/: orchestrator-identity.json
orchestrator/python/: README.md  main.py  pyproject.toml
orchestrator/src/: agent.ts  index.ts  server.ts
orchestrator/src/executor/: chat-agent.ts  task-executor.ts
orchestrator/src/routes/: orchestrator-routes.ts
registry/: Dockerfile  nodemon.json  package.json  tsconfig.json
registry/data/: registry-identity.json
registry/src/: agent.ts  index.ts  server.ts
registry/src/routes/: registry-routes.ts
registry/src/storage/: agent-store.ts
scripts/: patch-didcomm.js  test-e2e.sh
verifier/: Dockerfile
(+23 files in other folders)
