[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "llama-index>=0.14.18",
    "llama-index-llms-ollama>=0.10.0",
    "llama-index-llms-openai>=0.7.2",
    "openai>=2.29.0",
]
